--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,86 @@
 body {
-  color: slategrey;
+  background-color: #f9f7fe;
+  color: rgb(73, 83, 92);
+}
+
+select {
+  display: block;
+  width: 100%;
+  padding: 8px;
+  border-radius: 8px;
+  margin: 0 0 60px 0;
 }
 
 h1 {
   text-align: center;
+  font-size: xx-large;
+  font-weight: bolder;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h2 {
+  margin: 0 0 0 0;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(97, 110, 121);
+}
+
+/* unvisited link */
+a:link {
+  color: rgb(19, 19, 19);
+}
+
+/* visited link */
+a:visited {
+  color: rgb(102, 117, 130);
+}
+
+/* mouse over link */
+a:hover {
+  color: rgb(49, 69, 90);
+}
+
+/* selected link */
+a:active {
+  color: rgb(49, 69, 90);
+}
+
+.container {
+  background-color: #ffffff;
+  max-width: 400px;
+  margin: 20px auto;
+  border-radius: 10px;
+  padding: 30px 50px 20px 50px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.city {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 20px 0;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+}
+
+.city:last-child {
+  border: none;
+}
+
+.time {
+  display: flex;
+  font-size: xx-large;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  align-items: center;
+  color: rgb(97, 110, 121);
+}
+
+.time small {
+  font-size: 12px;
+  vertical-align: middle;
+  padding: 0 0 0 10px;
 }
 
 footer {
   text-align: center;
+  color: rgba(0, 0, 0, 0.5);
 }
