--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@ select {
   padding: 8px;
   border-radius: 8px;
   margin: 0;
+  font-size: 0.9rem;
 }
 
 h1 {
@@ -67,7 +68,7 @@ a:active {
 
 .time {
   display: flex;
-  font-size: xx-large;
+  font-size: 1.5rem;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
   align-items: center;
